CICO-55264: Zest Web templates - Fix for Bunk templates have black text on black background and thus not showing

--- a/guestweb/common_css/bunk_hotels/theme.less
+++ b/guestweb/common_css/bunk_hotels/theme.less
@@ -54,7 +54,7 @@ input[type=email] {
 .phone-text:hover,
 .request-text,
 .error-text {
-  color: #dcd4d4;
+  color: #ffffff;
 }
 
 .view-bill {
@@ -113,7 +113,7 @@ input[type=email] {
 
 .no-thanks,
 .no-thanks:hover {
-  color: #dcd4d4;
+  color: #ffffff;
   text-decoration: underline;
   text-transform: none;
 }
